AMPL finished - correct object result returned in OptimizationProcessService.runOptimizationProcess